#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
#AC_CONFIG_SRCDIR([customlib/pgplot/cpgplot.h])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
#AC_PROG_AWK
#AC_PROG_YACC
#AC_PROG_CC
#AC_PROG_LEX
#AC_PROG_INSTALL
AC_PROG_LN_S
#AC_PROG_MAKE_SET
#AC_PROG_RANLIB
#AC_PROG_F77

AC_SUBST(PREFIX)

AC_PATH_PROG(PERL, perl)


## Checks for libraries.
## FIXME: Replace `main' with a function in `-lMedia_s':
#AC_CHECK_LIB([Media_s], [main])
## FIXME: Replace `main' with a function in `-lNeXT_s':
#AC_CHECK_LIB([NeXT_s], [main])
## FIXME: Replace `main' with a function in `-lX11':
#AC_CHECK_LIB([X11], [main])
## FIXME: Replace `main' with a function in `-lXaPgplot':
#AC_CHECK_LIB([XaPgplot], [main])
## FIXME: Replace `main' with a function in `-lXaw':
#AC_CHECK_LIB([Xaw], [main])
## FIXME: Replace `main' with a function in `-lXext':
#AC_CHECK_LIB([Xext], [main])
## FIXME: Replace `main' with a function in `-lXm':
#AC_CHECK_LIB([Xm], [main])
## FIXME: Replace `main' with a function in `-lXmPgplot':
#AC_CHECK_LIB([XmPgplot], [main])
## FIXME: Replace `main' with a function in `-lXmu':
#AC_CHECK_LIB([Xmu], [main])
## FIXME: Replace `main' with a function in `-lXt':
#AC_CHECK_LIB([Xt], [main])
## FIXME: Replace `main' with a function in `-lcfitsio':
#AC_CHECK_LIB([cfitsio], [main])
## FIXME: Replace `main' with a function in `-lcpgplot':
#AC_CHECK_LIB([cpgplot], [main])
## FIXME: Replace `main' with a function in `-ldl':
#AC_CHECK_LIB([dl], [main])
## FIXME: Replace `main' with a function in `-lg2c':
#AC_CHECK_LIB([g2c], [main])
## FIXME: Replace `main' with a function in `-lgcc':
#AC_CHECK_LIB([gcc], [main])
## FIXME: Replace `main' with a function in `-lib':
#AC_CHECK_LIB([ib], [main])
## FIXME: Replace `main' with a function in `-lm':
#AC_CHECK_LIB([m], [main])
## FIXME: Replace `main' with a function in `-lpgplot':
#AC_CHECK_LIB([pgplot], [main])
## FIXME: Replace `main' with a function in `-lpthread':
#AC_CHECK_LIB([pthread], [main])
## FIXME: Replace `main' with a function in `-ltcl':
#AC_CHECK_LIB([tcl], [main])
## FIXME: Replace `main' with a function in `-ltk':
#AC_CHECK_LIB([tk], [main])
## FIXME: Replace `main' with a function in `-ltkpgplot':
#AC_CHECK_LIB([tkpgplot], [main])
## FIXME: Replace `main' with a function in `-lutil':
#AC_CHECK_LIB([util], [main])

# Checks for header files.
#AC_PATH_X
#AC_FUNC_ALLOCA
#AC_HEADER_STDC
#AC_HEADER_SYS_WAIT
#AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h limits.h locale.h malloc.h memory.h netdb.h netinet/in.h sgtty.h stddef.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/systeminfo.h sys/time.h termio.h termios.h unistd.h values.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STDBOOL
#AC_C_CONST
#AC_TYPE_MODE_T
#AC_TYPE_SIZE_T
#AC_HEADER_TIME
#AC_STRUCT_TM
#AC_C_VOLATILE
#AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
#AC_FUNC_ERROR_AT_LINE
#AC_FUNC_FORK
#AC_FUNC_FSEEKO
#AC_PROG_GCC_TRADITIONAL
#AC_FUNC_LSTAT
#AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
#AC_FUNC_MALLOC
#AC_FUNC_MEMCMP
#AC_FUNC_MMAP
#AC_FUNC_REALLOC
#AC_FUNC_SELECT_ARGTYPES
#AC_TYPE_SIGNAL
#AC_FUNC_STAT
#AC_FUNC_STRFTIME
#AC_FUNC_STRTOD
#AC_FUNC_VPRINTF
#AC_CHECK_FUNCS([alarm atexit dup2 floor ftruncate getcwd gethostbyaddr gethostbyname gethostname localeconv memchr memset munmap pow rint select socket sqrt strcasecmp strchr strcspn strerror strncasecmp strndup strrchr strspn strstr strtol sysinfo])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
